# serde-trait-objects-example

./: Cargo.toml  README.md
definer/: Cargo.toml
definer/src/: lib.rs
implementer/: Cargo.toml
implementer/src/: lib.rs
