[package]
name = "implementer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definer = { version = "0.1.0", path = "../definer" }
serde = { version = "1.0.160", features = ["derive"] }
typetag = "0.2.8"

[dev-dependencies]
serde_yaml = "0.9.21"
